# shared/openapi/v1.json
@@ -5158,6 +5158,23 @@
             }
           },
           {
+            "in": "query",
+            "name": "import_id",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "format": "uuid",
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Import Id"
+            }
+          },
+          {
             "in": "header",
             "name": "X-Workspace-Code",
             "required": true,
